// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DeletedAccountState with all prop options: DeletedAccountState 1`] = `
"<div class=\\"w-full flex relative\\">
  <div class=\\"absolute w-1/2 -top-102 inset-x-1/4 rounded-full intermediate-page-gradient-layer\\"></div>
  <div class=\\"flex flex-col mx-auto justify-between min-h-screen pt-32 pb-24 text-sm text-center text-vanilla-400\\">
    <div class=\\"flex items-center flex-grow\\">
      <section class=\\"w-full px-3.5 md:px-12 py-12 md:py-19 space-y-8\\">
        <empty-state-picture webp-image-path=\\"test-image-dir/test-image-file.png\\" png-image-path=\\"test-image-dir/test-image-file.png\\" svg-image-path=\\"\\" width=\\"w-auto\\" alt-text=\\"This page has no data\\" height=\\"h-17 md:h-20\\" class=\\"\\"></empty-state-picture>
        <div class=\\"\\">
          <h3 class=\\"text-vanilla-100 mt-7 md:mt-5 text-center text-lg font-semibold\\"><span class=\\"text-base\\">Your  has been deleted.</span></h3>
          <p class=\\"text-sm text-vanilla-400 mt-2 sm:mt-1 mx-auto max-w-md text-center\\"> Redirecting to deepsource.io... </p>
          <!---->
        </div>
      </section>
    </div>
  </div>
</div>"
`;

exports[`renders DeletedAccountState with all prop options: DeletedAccountState 2`] = `
"<div class=\\"w-full flex relative\\">
  <div class=\\"absolute w-1/2 -top-102 inset-x-1/4 rounded-full intermediate-page-gradient-layer\\"></div>
  <div class=\\"flex flex-col mx-auto justify-between min-h-screen pt-32 pb-24 text-sm text-center text-vanilla-400\\">
    <div class=\\"flex items-center flex-grow\\">
      <section class=\\"w-full px-3.5 md:px-12 py-12 md:py-19 space-y-8\\">
        <empty-state-picture webp-image-path=\\"test-image-dir/test-image-file.png\\" png-image-path=\\"test-image-dir/test-image-file.png\\" svg-image-path=\\"\\" width=\\"w-auto\\" alt-text=\\"This page has no data\\" height=\\"h-17 md:h-20\\" class=\\"\\"></empty-state-picture>
        <div class=\\"\\">
          <h3 class=\\"text-vanilla-100 mt-7 md:mt-5 text-center text-lg font-semibold\\"><span class=\\"text-base\\">Your team has been deleted.</span></h3>
          <p class=\\"text-sm text-vanilla-400 mt-2 sm:mt-1 mx-auto max-w-md text-center\\"> Redirecting to deepsource.io... </p>
          <!---->
        </div>
      </section>
    </div>
  </div>
</div>"
`;

exports[`renders DeletedAccountState with all prop options: DeletedAccountState 3`] = `
"<div class=\\"w-full flex relative\\">
  <div class=\\"absolute w-1/2 -top-102 inset-x-1/4 rounded-full intermediate-page-gradient-layer\\"></div>
  <div class=\\"flex flex-col mx-auto justify-between min-h-screen pt-32 pb-24 text-sm text-center text-vanilla-400\\">
    <div class=\\"flex items-center flex-grow\\">
      <section class=\\"w-full px-3.5 md:px-12 py-12 md:py-19 space-y-8\\">
        <empty-state-picture webp-image-path=\\"test-image-dir/test-image-file.png\\" png-image-path=\\"test-image-dir/test-image-file.png\\" svg-image-path=\\"\\" width=\\"w-auto\\" alt-text=\\"This page has no data\\" height=\\"h-17 md:h-20\\" class=\\"\\"></empty-state-picture>
        <div class=\\"\\">
          <h3 class=\\"text-vanilla-100 mt-7 md:mt-5 text-center text-lg font-semibold\\"><span class=\\"text-base\\">Your team has been deleted.</span></h3>
          <p class=\\"text-sm text-vanilla-400 mt-2 sm:mt-1 mx-auto max-w-md text-center\\"> Redirecting to deepsource.io... </p>
          <!---->
        </div>
      </section>
    </div>
  </div>
</div>"
`;

exports[`renders DeletedAccountState with all prop options: DeletedAccountState 4`] = `
"<div class=\\"w-full flex relative\\">
  <div class=\\"absolute w-1/2 -top-102 inset-x-1/4 rounded-full intermediate-page-gradient-layer\\"></div>
  <div class=\\"flex flex-col mx-auto justify-between min-h-screen pt-32 pb-24 text-sm text-center text-vanilla-400\\">
    <div class=\\"flex items-center flex-grow\\">
      <section class=\\"w-full px-3.5 md:px-12 py-12 md:py-19 space-y-8\\">
        <empty-state-picture webp-image-path=\\"test-image-dir/test-image-file.png\\" png-image-path=\\"test-image-dir/test-image-file.png\\" svg-image-path=\\"\\" width=\\"w-auto\\" alt-text=\\"This page has no data\\" height=\\"h-17 md:h-20\\" class=\\"\\"></empty-state-picture>
        <div class=\\"\\">
          <h3 class=\\"text-vanilla-100 mt-7 md:mt-5 text-center text-lg font-semibold\\"><span class=\\"text-base\\">Your account has been deleted.</span></h3>
          <p class=\\"text-sm text-vanilla-400 mt-2 sm:mt-1 mx-auto max-w-md text-center\\"> Redirecting to deepsource.io... </p>
          <!---->
        </div>
      </section>
    </div>
  </div>
</div>"
`;
